--- a/Project/public/assets/scss/style.scss
+++ b/Project/public/assets/scss/style.scss
@@ -2,3 +2,4 @@
 @use "abstract/base";
 @use "components/search/search";
 @use "components/fetchForm/fetchForm";
+@use "components/searchNaw/searchNaw";
