--- a/Project/public/assets/scss/style.scss
+++ b/Project/public/assets/scss/style.scss
@@ -1,5 +1,6 @@
-@use "abstract/reset";
-@use "abstract/base";
-@use "components/search/search";
-@use "components/fetchForm/fetchForm";
-@use "components/searchNaw/searchNaw";
+@use "abstract/reset.scss";
+@use "abstract/base.scss";
+@use "components/search/search.scss";
+@use "components/fetchForm/fetchForm.scss";
+@use "components/searchNaw/searchNaw.scss";
+@use "components/naw/naw.scss";
