--- a/Project/public/assets/scss/style.scss
+++ b/Project/public/assets/scss/style.scss
@@ -4,3 +4,4 @@
 @use "components/fetchForm/fetchForm.scss";
 @use "components/searchNaw/searchNaw.scss";
 @use "components/naw/naw.scss";
+@use "components/imageForm/imageForm.scss";
